Fix pg restore script and update attic settings file
- Attic settings file has now $HOME override if the crontab $HOME is not
  set correctly (eg to / instead of /root/). Else it will crash with not
  finding the key files for encrypted backup
- Update pg restore from file script with missing $home and $port for
  the create user part. Add logging for all actions to log file.

--- a/backup/attic.backup.settings
+++ b/backup/attic.backup.settings
@@ -1,5 +1,8 @@
 # Attic backup wrapper scripts settings
 
+# home folder, needs to be set if there is eg a HOME=/ in the crontab
+HOME=/root/
+
 # Backup via attic, script file
 DEBUG=0;
 VERBOSE=0;
