Attic backup scripts update
- move HOME check, DEBUG/VERBOSE out of the settings file
- $HOME is checked for writeable, if not set to default path for logged
  in user
- all scripts have set -e -u -o pipefail and all vars are in {} now
- check if include/exclude folders are valid or if they are commented
- include folders must exist
- exclude folders are only warned
- config files folder can be set via command line option

--- a/backup/attic.backup.settings
+++ b/backup/attic.backup.settings
@@ -1,18 +1,11 @@
 # Attic backup wrapper scripts settings
 
-# home folder, needs to be set if there is eg a HOME=/ in the crontab
-HOME=/root/
-
-# Backup via attic, script file
-DEBUG=0;
-VERBOSE=0;
-
 # target users, etc
 TARGET_USER="";
 TARGET_HOST="";
-TARGET_FOLDER="/path/to/attic/base/";
+TARGET_FOLDER="";
 # the backup file for this host
-BACKUP_FILE="some-name-"`hostname`".attic";
+BACKUP_FILE="some-prefix-"`hostname`".attic";
 # todays date
 DATE=`date +%Y-%m-%d`;
 # post run cleanup times
