Borg backup wrapper script update
Set borg base path variable to the script config base path to have
.cache and .config in the same folder as the borg settings. This avoids
issues with multiple runs from same or similar source folders or
targets.

Also fix all path checks and use printf "%q" to quote all paths/files.

Do check that no config folders start with ~/ to avoid any strange path
issues.

More strickt check for borg backup folder name.

Default to ignore repository moved or access to unencrypted folder

--- a/borg/borg.backup.settings
+++ b/borg/borg.backup.settings
@@ -1,5 +1,7 @@
 # Borg backup wrapper scripts settings
 
+# NOTE: ALL FOLDERS MUST BE ABSOLUTE WITH NO ~/ AT THE BEGINNING
+
 # set log folder, if empty default will be used (/var/log/borg.backup)
 LOG_FOLDER="";
 # SSH user, host, port
